--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div class="container" id="about">
         <h2>About Honey Bee</h2>
-        <img id="honeyBeeImage" src="honeybee.jpg" alt="Honey Bee">
+        <img id="honeyBeeImage" src="honeybee_main.jpg" alt="Honey Bee">
         <p>Discover the buzz around this amazing Roblox character.</p>
     </div>
 
@@ -34,8 +34,11 @@
 
     <div class="container" id="videos">
         <h2>Videos</h2>
-        <!-- Add Roblox-related videos or embed codes here -->
         <p>Feel the excitement by watching these Honey Bee gameplay videos!</p>
+        <!-- Replace the following with your actual video links or embed codes -->
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/-opJjJMcCBw" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/vpJx44r7bqk" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/8ZGjV0jPZ84" frameborder="0" allowfullscreen></iframe>
     </div>
 
     <script src="script.js"></script>
