--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
 
     <div class="container" id="about">
         <h2>About Honey Bee</h2>
-        <img id="honeyBeeImage" src="honeybee_main.jpg" alt="Honey Bee">
+        <img id="honeyBeeImage" src="honeybee_main.jpeg" alt="Honey Bee">
         <p>Discover the buzz around this amazing Roblox character.</p>
     </div>
 
     <div class="container" id="gallery">
         <h2>Gallery</h2>
         <!-- Add Roblox images for the gallery here -->
-        <img src="roblox_image_1.jpg" alt="Roblox Image 1">
-        <img src="roblox_image_2.jpg" alt="Roblox Image 2">
+        <img src="roblox_image_1.jpeg" alt="Roblox Image 1">
+        <img src="roblox_image_2.jpeg" alt="Roblox Image 2">
         <!-- Add more images as needed -->
     </div>
 
